Feature: prisma model

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc && node dist/index.js",
     "typecheck": "tsc --watch --noEmit",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:deploy": "prisma migrate deploy"
+    "p:gen": "prisma generate",
+    "p:mig": "prisma migrate dev",
+    "p:dep": "prisma migrate deploy"
   },
   "repository": {
     "type": "git",
