Feature: queries & types

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typecheck": "tsc --watch --noEmit",
     "p:gen": "prisma generate",
     "p:mig": "prisma migrate dev",
-    "p:dep": "prisma migrate deploy"
+    "p:dep": "prisma migrate deploy",
+    "p:studio": "prisma studio"
   },
   "repository": {
     "type": "git",
