--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
   "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "outDir": "./dist",
     "sourceMap": true,
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "types": ["node", "@types/express"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
