--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/passport-jwt": "^4.0.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "connect-flash": "^0.1.1",
@@ -36,8 +38,10 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
     "prisma": "^6.5.0"
