--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^6.5.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node-cron": "^3.0.11",
     "@types/passport-jwt": "^4.0.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
@@ -40,6 +41,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
