--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cloudinary": "^2.6.0",
     "connect-flash": "^0.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -53,6 +54,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-flash": "^0.0.40",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/multer": "^1.4.12",
