--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/Shay-Webdev/blog-api-backend#readme",
   "dependencies": {
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.7.0",
     "@quixo3/prisma-session-store": "^3.1.13",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node-cron": "^3.0.11",
@@ -46,8 +46,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.14.1",
-    "prisma": "^6.5.0"
+    "pg": "^8.14.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
@@ -61,6 +60,7 @@
     "@types/node": "^22.13.10",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
+    "prisma": "^6.7.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   }
