--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "@tsconfig/node22": "^22.0.1",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.15.17",
     "pg": "^8.14.1"
   },
   "devDependencies": {
