--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
